# TinyEmo

./: CITATION.bib  README.md
projector_mps/: pyproject.toml
projector_mps/dataloaders/: Abstract_dataloader.py  ArtPhoto_dataloader.py  EmoROI.py  EmoROI_precomputed.py  EmoSet.py  EmoSet_precompute.py  Emotion6.py  Emotion6_precompute.py  FI_dataloader.py  FI_dataloader_precomputed.py  UnbiasedEmo_dataloader.py  UnbiasedEmo_dataloader_precomputed.py  WEBEmo.py  WEBEmo_precompute.py  augmented_WEBEmo_precomputed.py
projector_mps/sample_data/Emotion6/Emotion6/images/test/anger/: 1.pt  101.pt  109.pt  11.pt  115.pt  119.pt  122.pt  123.pt  126.pt  131.pt  134.pt  135.pt  138.pt  146.pt  151.pt  162.pt  170.pt  174.pt  18.pt  185.pt  188.pt  195.pt  201.pt  202.pt  211.pt  212.pt  218.pt  219.pt  220.pt  239.pt  24.pt  26.pt  266.pt  269.pt  277.pt  280.pt  29.pt  290.pt  295.pt  297.pt  (+18 more)
projector_mps/sample_data/Emotion6/Emotion6/images/test/disgust/: 10.pt  100.pt  102.pt  111.pt  113.pt  14.pt  149.pt  152.pt  154.pt  157.pt  161.pt  164.pt  170.pt  171.pt  172.pt  175.pt  180.pt  183.pt  189.pt  19.pt  205.pt  206.pt  208.pt  209.pt  215.pt  217.pt  223.pt  230.pt  232.pt  234.pt  245.pt  256.pt  265.pt  275.pt  282.pt  283.pt  285.pt  307.pt  309.pt  322.pt  (+7 more)
projector_mps/sample_data/Emotion6/Emotion6/images/test/fear/: 101.pt  102.pt  107.pt  109.pt  114.pt  119.pt  124.pt  131.pt  151.pt  154.pt  155.pt  16.pt  168.pt  172.pt  176.pt  184.pt  189.pt  190.pt  191.pt  20.pt  206.pt  21.pt  211.pt  219.pt  228.pt  236.pt  238.pt  247.pt  258.pt  262.pt  264.pt  270.pt  273.pt  282.pt  283.pt  292.pt  300.pt  307.pt  32.pt  326.pt  (+12 more)
projector_mps/sample_data/Emotion6/Emotion6/images/test/joy/: 104.pt  105.pt  113.pt  114.pt  115.pt  121.pt  123.pt  147.pt  150.pt  157.pt  16.pt  161.pt  168.pt  169.pt  174.pt  177.pt  187.pt  2.pt  (+28 more)
projector_mps/scripts/: eval.sh  eval_Emotion6.sh  eval_all.sh  eval_custom.sh  eval_one.sh  precompute.sh  train.sh  train_aug.sh
projector_mps/src/: eval.py  eval_one.py  train.py  train_aug.py
projector_mps/src/model/: llm.py  model.py  precompute_features.py  projector.py  utils.py  vision_encoder.py
(+1809 files in other folders)
